[tool.poetry]
name = "plex-match"
version = "0.1.0"
description = ""
authors = ["Philipp Flügger <philipp.fluegger@dfki.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
